tests/fixtures/fail/stdlib/stdlib_io_invalid_mode_vm.walrus
import "std/io";

io.file_open("/tmp/walrus_invalid_mode.txt", "bad");
